--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "quickp2p",
   "version": "1.0.0",
-  "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "eventemitter3": "^3.1.2",
@@ -14,6 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-lib": "NODE_ENV=production babel src/lib --out-dir build/lib --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "npm start"
@@ -33,6 +33,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
