--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "build-lib": "NODE_ENV=production babel src/lib --out-dir build/lib --copy-files",
+    "build-lib": "cross-env NODE_ENV=production babel src/lib --out-dir build/lib --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "npm start"
@@ -36,6 +36,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
+    "cross-env": "^7.0.3",
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0"
