--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "quickp2p-demo",
   "version": "1.0.0",
   "dependencies": {
-    "axios": "^0.18.0",
-    "eventemitter3": "^3.1.2",
-    "querystring": "^0.2.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "^2.1.8",
+    "axios": "^1.6.5",
+    "eventemitter3": "^5.0.1",
+    "query-string": "^8.1.0",
+    "react": "^16.10.0",
+    "react-dom": "^16.10.0",
+    "react-scripts": "^5.0.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
@@ -19,7 +19,17 @@
     "dev": "npm start"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.js?(x)"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   },
   "husky": {
     "hooks": {
@@ -33,6 +43,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
@@ -40,5 +51,6 @@
     "husky": "^1.3.1",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0"
-  }
+  },
+  "license": "MIT"
 }
